--- a/Client/Containers/Container-Main.razor
+++ b/Client/Containers/Container-Main.razor
@@ -1,4 +1,4 @@
-@namespace ToSicCre8magic.Theme.Basic
+@namespace ToSic.Cre8magic.Theme.Basic
 @inherits ContainerBase
 @inject ISettingService SettingService
 
@@ -20,7 +20,7 @@
 </div>
 
 @code {
-    public override string Name => "ToSicCre8magic Basic - Main Container";
+    public override string Name => "ToSic.Cre8magic Basic - Main Container";
 
     private bool _title = false;
     private string _classes = "container py-4";
