--- a/Client/Containers/ContainerSettings.razor
+++ b/Client/Containers/ContainerSettings.razor
@@ -1,4 +1,4 @@
-@namespace ToSicCre8magic.Theme.Basic
+@namespace ToSic.Cre8magic.Theme.Basic
 @inherits ModuleBase
 @implements Oqtane.Interfaces.ISettingsControl
 @inject ISettingService SettingService
@@ -17,7 +17,7 @@
 </div>
 
 @code {
-	private string resourceType = "ToSicCre8magic.Theme.Basic.ContainerSettings, ToSicCre8magic.Theme.Basic.Client.Oqtane"; // for localization
+	private string resourceType = "ToSic.Cre8magic.Theme.Basic.ContainerSettings, ToSic.Cre8magic.Theme.Basic.Client.Oqtane"; // for localization
     private string _title = "true";
 
     protected override void OnInitialized()
