--- a/Client/Themes/Default.razor
+++ b/Client/Themes/Default.razor
@@ -1,5 +1,5 @@
-@namespace ToSicCre8magic.Theme.Basic
-@using ToSicCre8magic.Theme.Basic.Client.Themes
+@namespace ToSic.Cre8magic.Theme.Basic
+@using ToSic.Cre8magic.Theme.Basic.Client.Themes
 @inherits ThemeBase
 @inject ISettingService SettingService
 
