--- a/Client/Themes/ThemeSettings.razor
+++ b/Client/Themes/ThemeSettings.razor
@@ -1,5 +1,5 @@
-@namespace ToSicCre8magic.Theme.Basic
-@using ToSicCre8magic.Theme.Basic.Client.Themes
+@namespace ToSic.Cre8magic.Theme.Basic
+@using ToSic.Cre8magic.Theme.Basic.Client.Themes
 @inherits ModuleBase
 @implements Oqtane.Interfaces.ISettingsControl
 @inject ISettingService SettingService
@@ -111,7 +111,7 @@
 
 @code {
     private int pageId = -1;
-    private string resourceType = "ToSicCre8magic.Theme.Basic.ThemeSettings, ToSicCre8magic.Theme.Basic.Client.Oqtane"; // for localization
+    private string resourceType = "ToSic.Cre8magic.Theme.Basic.ThemeSettings, ToSic.Cre8magic.Theme.Basic.Client.Oqtane"; // for localization
     private string _scope = "page";
     private string _login = "-";
     private string _register = "-";
