--- a/Client/Containers/Container-Header.razor
+++ b/Client/Containers/Container-Header.razor
@@ -1,4 +1,4 @@
-@namespace ToSicCre8magic.Theme.Basic
+@namespace ToSic.Cre8magic.Theme.Basic
 @inherits ContainerBase
 @inject ISettingService SettingService
 
@@ -20,7 +20,7 @@ else
 </div>
 
 @code {
-    public override string Name => "ToSicCre8magic Basic - Header";
+    public override string Name => "ToSic.Cre8magic Basic - Header";
 
     private bool _title = false;
 
