update container names

--- a/Client/Containers/Container-Header.razor
+++ b/Client/Containers/Container-Header.razor
@@ -20,7 +20,7 @@ else
 </div>
 
 @code {
-    public override string Name => "ToSic.Cre8magic Basic - Header";
+    public override string Name => "Cre8magic Basic - Header";
 
     private bool _title = false;
 
