--- a/Client/Containers/Container-Main.razor
+++ b/Client/Containers/Container-Main.razor
@@ -20,7 +20,7 @@
 </div>
 
 @code {
-    public override string Name => "ToSic.Cre8magic Basic - Main Container";
+    public override string Name => "Cre8magic Basic - Container";
 
     private bool _title = false;
     private string _classes = "container py-4";
